   an Unsplit button (reuses existing string).
 * src/editor.c:
   Fix segfault when holding Alt and scrolling editor window.
 * plugins/splitwindow.c:
   Use EditWindow structure instead of separate global variables.
 * plugins/splitwindow.c:
   Fix segfault when clicking on split window after the original
   document has been closed and the view has been refreshed to another
   document.


2008-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/splitwindow.c:
   Fix wrong editor scrollbar mouse cursor and broken middle-click
   paste after splitting or unsplitting (fixes #2142186).
   Note: this is a workaround for an issue with Scintilla where the
   widget (or its parents) can't be removed or reparented to a
   non-visible widget.


2008-10-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/interface.c:
   Enable interactive search for the keybindings tree view in the
   prefs dialog.
 * wscript, waf:
   Update waf to its latest SVN version (nearly 1.5.0).
   Adjust wscript to latest Waf API changes.
 * configure.in, wscript, tagmanager/ctags.c, src/tools.c:
   Use g_strerror() instead of strerror().
   Remove build system checks for strerror().


2008-10-03  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/latex.tags: Added some more keywords for moderncv to tag list.


2008-10-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html, po/POTFILES.in, plugins/saveactions.c,
   plugins/autosave.c, plugins/Makefile.am, plugins/makefile.win32:
   Merge InstantSave, AutoSave and BackupCopy plugins into the
   plugin 'Save Actions'.
   Add a section for documentation of internal plugins in the
   documentation.
 * doc/geany.html, doc/geany.txt, geany.glade, src/interface.c,
   src/keyfile.c, src/prefs.c, src/project.c, src/project.h:
   Add an option to store the project file of new projects inside the
   project base directory.